--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
+
 <body>
+	<nav class="top-navigation">
+		<div class="content"></div>
+	</nav>
 	
 </body>
 </html>
