--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
 <body>
 	<nav class="top-navigation">
-		<div class="content"></div>
+		<div class="content">
+			<img class="logo" src="karma-logo.svg" alt="Karma" width="26px">
+		</div>
 	</nav>
-	
+
 </body>
 </html>
