--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 	<nav class="top-navigation">
 		<div class="content">
 			<img class="logo" src="karma-logo.svg" alt="Karma" width="26px">
+		
+		<ul class="links">
+			<li> Meet Karma</li>
+			<li>How It Works</li>
+			<li>Store</li>
+			<li>Blog</li>
+			<li>Help</li>
+			<li>Login in</li>
+		</ul>
 		</div>
 	</nav>
 
