--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -12,7 +13,7 @@
 			<img class="logo" src="karma-logo.svg" alt="Karma" width="26px">
 		
 		<ul class="links">
-			<li> Meet Karma</li>
+			<li class="active"> Meet Karma</li>
 			<li>How It Works</li>
 			<li>Store</li>
 			<li>Blog</li>
