--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 		</ul>
 		</div>
 	</nav>
+<section class="masthead">
+	<h1>Introducing Karma</h1>
+	<h2>Bring WiFi with you, everywhere you go.</h2>
+
+</section>
 
 </body>
 </html>
