--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</ul>
 		</div>
 	</nav>
-<section class="masthead">
+<section class="introduction">
 	<h1>Introducing Karma</h1>
 	<h2>Bring WiFi with you, everywhere you go.</h2>
 
