--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 		</div>
 	</nav>
 <section class="introduction">
-	<h1>Introducing Karma</h1>
-	<h2>Bring WiFi with you, everywhere you go.</h2>
-
+	<div class="content">
+		<h1>Introducing Karma</h1>
+		<h3>Bring WiFi with you, everywhere you go.</h3>
+		<button class="big-button">Learn More</button>
+	</div>
 </section>
 
 </body>
