--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
 	</div>
 </section>
 
+<section class="cases">
+	<h2>Everyone needs a little Karma.</h2>
+
+	<div class="devices"></div>
+	<div class="devices"></div>
+	<div class="devices"></div>
+
+
+</section>
+
 </body>
 </html>
