Woof. Trying to make this div work

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <section class="cases">
 	<h2>Everyone needs a little Karma.</h2>
 
-	<div class="devices"></div>
-	<div class="devices"></div>
-	<div class="devices"></div>
+	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/devices.svg" alt=" " width="115px"></div>
+	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/coffee.svg" alt=" " width="115px"></div>
+	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/refill.svg" alt=" " width="115px"></div>
 
 
 </section>
