finally got pics in

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/devices.svg" alt=" " width="115px"></div>
 	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/coffee.svg" alt=" " width="115px"></div>
 	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/refill.svg" alt=" " width="115px"></div>
+	<div><p class="content2">Internet for all devices</p></div>
+	<div><p class="content2">Internet for all devices</p></div>
+	<div><p class="content2">Internet for all devices</p></div>
+
 
 
 </section>
