--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+<link href="/css/font-awesome.min.css" rel="stylesheet">
 <head>
 	<link rel="stylesheet" href="css/style.css">
 	<meta charset="UTF-8">
@@ -36,13 +38,24 @@
 	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/devices.svg" alt=" " width="115px"></div>
 	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/coffee.svg" alt=" " width="115px"></div>
 	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/refill.svg" alt=" " width="115px"></div>
-	<div><p class="content2">Internet for all devices</p></div>
-	<div><p class="content2">Internet for all devices</p></div>
-	<div><p class="content2">Internet for all devices</p></div>
-
-
-
+	
 </section>
+
+<footer class="social">
+    <div class="content">
+        <ul class="icons">
+            <li>
+                <i class="fa fa-twitter"></i>
+            </li>
+            <li>
+                <i class="fa fa-facebook"></i>
+            </li>
+            <li>
+                <i class="fa fa-instagram"></i>
+            </li>
+        </ul>
+    </div>
+</footer>
 
 </body>
 </html>
