Added modified css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
-<link href="/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <head>
 	<link rel="stylesheet" href="css/style.css">
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link rel="icon" type="image/png" href="favicon.ico" />
 </head>
 
 <body>
@@ -35,13 +35,16 @@
 <section class="cases">
 	<h2>Everyone needs a little Karma.</h2>
 
-	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/devices.svg" alt=" " width="115px"></div>
-	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/coffee.svg" alt=" " width="115px"></div>
-	<div class="devices"><img src="file:///Users/jakelinder/Desktop/projects/startup-landing-page-clone/images/refill.svg" alt=" " width="115px"></div>
-	
+	<div class="devices"><img src="images/devices.svg" alt=" " width="115px"></div>
+	<div class="devices"><img src="images/coffee.svg" alt=" " width="115px"></div>
+	<div class="devices"><img src="images/refill.svg" alt=" " width="115px"></div>
+            <div class="devicetext">Internet for all devices</div>
+            <div class="devicetext">Boost your productivity</div>
+            <div class="devicetext">Pay as You Go</div>
 </section>
-
+<hr />
 <footer class="social">
+<h3> Join Us On </h3>
     <div class="content">
         <ul class="icons">
             <li>
@@ -54,6 +57,7 @@
                 <i class="fa fa-instagram"></i>
             </li>
         </ul>
+        
     </div>
 </footer>
 
